--- a/WebContent/pages/private/workflows/pipeline_composer.xhtml
+++ b/WebContent/pages/private/workflows/pipeline_composer.xhtml
@@ -18,8 +18,9 @@
                     <p:tab id="element_selection" title="Seleção de Elementos">
                         <p:panel header="Escolha os elementos deste Workflow">
                             <p:panel style="border-color: #2980b9">
-                                <p:outputLabel value="De uma breve descricao deste workflow" /> <br />
-                                <p:inputText value="#{pipelineComposerBean.workflowDescription}" style="width: 99%"/>
+                                <p:outputLabel value="De uma breve descrição deste workflow" /> <br />
+                                <p:inputText value="#{pipelineComposerBean.workflowDescription}" style="width: 99%"
+                                             required="true" requiredMessage="Campo 'Descrição' obrigatorio" />
                             </p:panel> 
                             <br />
                             <p:fieldset legend="Elementos disponíveis" style="border-color: #2980b9">
@@ -97,16 +98,21 @@
                             <p:panel>
                                 <p:panelGrid columns="2" >
                                     <f:facet name="header">
-                                        <p:outputLabel value="Dados deste workflow" />
+                                        <p:outputLabel value="Dados deste workflow" style="font-size: 120%; margin: 10px"/>
                                     </f:facet>
-                                    <p:outputLabel value="Id" />
-                                    <p:outputLabel value="#{pipelineComposerBean.workflow.id}" />
-                                    <p:outputLabel value="Descricao" />
+                                    <p:outputLabel value="Id" style="font-weight: bold"/>
+                                    <p:outputLabel value="#{pipelineComposerBean.workflow.id}" style="font-weight: bold"/>
+                                    <p:outputLabel value="Descrição" style="font-weight: bold"/>
                                     <p:outputLabel value="#{pipelineComposerBean.workflow.description} " />
-                                    <p:outputLabel value="Tamanho" />
-                                    <p:outputLabel value="#{pipelineComposerBean.workflow.pipeline.size()} " />
-                                    <p:outputLabel value="Criado em" />
+                                    <p:outputLabel value="Tamanho" style="font-weight: bold"/>
+                                    <p:outputLabel value="#{pipelineComposerBean.workflow.pipeline.size()} passo(s)" />
+                                    <p:outputLabel value="Criado em" style="font-weight: bold"/>
                                     <p:outputLabel value="#{pipelineComposerBean.workflow.creationDatestamp}" />
+                                    <p:outputLabel value="Status" style="font-weight: bold"/>
+                                    <p:outputLabel value="#{pipelineComposerBean.workflowStatus}" 
+                                                   style="font-weight: bold; color: #{pipelineComposerBean.workflowColor}"/>
+                                    <p:outputLabel value="Quantidade de inputs" style="font-weight: bold"/>
+                                    <p:outputLabel value="#{pipelineComposerBean.pipeline.size()}" />
                                 </p:panelGrid>
                             </p:panel>
                             <br />
@@ -123,6 +129,12 @@
                                     <p:outputLabel value="#{j.inputs.size()}" />
                                 </p:column>
                             </p:dataTable>
+                            <br />
+                            <p:panel header="Iniciar Execução" style="text-align: center">
+                                <center>
+                                    <p:commandButton value="Confirmar Workflow" style="margin: 10px; border-color: #2980b9"/>
+                                </center>
+                            </p:panel>
                         </p:panel>
                     </p:tab>
                 </p:wizard>
@@ -157,7 +169,7 @@
                         <br />
                         <p:dataTable value="#{pipelineComposerBean.loggedUser.files}" var="f" style="width: 60em"
                                      paginator="true" rows="5" emptyMessage="Nenhum arquivo encontrado"
-                                     selection="#{pipelineComposerBean.inputList}" rowKey="#{f.id}" >
+                                     selection="#{pipelineComposerBean.inputList}" rowKey="#{f.name}" >
                             <p:column headerText="ID" width="5em" style="text-align: center">
                                 <p:outputLabel value="#{f.id}"/>
                             </p:column>
