Workflow management incremented

--- a/WebContent/pages/private/profile/edit_profile.xhtml
+++ b/WebContent/pages/private/profile/edit_profile.xhtml
@@ -23,6 +23,8 @@
 			<p:outputLabel value="#{sessionBean.loggedUser.password}" />
 			<br />
 			<p:outputLabel value="#{sessionBean.loggedUser.securityToken}" />
+                        <br />
+                        <p:outputLabel value="#{sessionBean.loggedUser.workflows.size()}" />
 			<br />
 			<br />
 			
