--- a/WebContent/pages/private/workflows/status.xhtml
+++ b/WebContent/pages/private/workflows/status.xhtml
@@ -12,54 +12,81 @@
             <h:form>
                 <p:panel header="Status dos Workflows Em Execução/Finalizados">
                     <p:panel>
-                        Visualize aqui o status de seus workflows. <br /> <br />
-                        <p:panel>
-                            <center>
-                                <p:panelGrid columns="3" style="margin-top: 10px">
-                                    <f:facet name="header">
-                                        <p:outputLabel value="Legenda de Status" style="color: #2980b9; font-weight: bold; font-size: 14px"/>
-                                    </f:facet>
-                                    
-                                    <!-- Header -->
-                                    <p:outputLabel value="Status" style="font-weight: bold; font-size: 14px"/>
-                                    <p:outputLabel value="Nivel" style="font-weight: bold; font-size: 14px"/>
-                                    <p:outputLabel value="Legenda" style="font-weight: bold; font-size: 14px"/>
-
-                                    <!-- Elements -->
-                                    <p:outputLabel value="Workflow Pausado" style="color: #7f8c8d; font-weight: bold"/>
-                                    <p:outputLabel value="Informativo" style="font-weight: bold"/>
-                                    <p:outputLabel value="Foi requisitada a pausa na execucao do Workflow" />
-
-                                    <p:outputLabel value="Workflow Pendente" style="color: #2980b9; font-weight: bold"/>
-                                    <p:outputLabel value="Informativo" style="font-weight: bold"/>
-                                    <p:outputLabel value="Seu workflow esta agurdando execucao pelo BioNimbuZ" />
-
-                                    <p:outputLabel value="Workflow em Execução" style="color: #2980b9; font-weight: bold"/>
-                                    <p:outputLabel value="Informativo" style="font-weight: bold"/>
-                                    <p:outputLabel value="O workflow esta em plena execucao" />
-
-                                    <p:outputLabel value="Workflow Finalizado com Sucesso" style="color: #27ae60; font-weight: bold"/>
-                                    <p:outputLabel value="Informativo" style="font-weight: bold"/>
-                                    <p:outputLabel value="Seu workflow foi finalizado sem alertas e sem erros" />
-
-                                    <p:outputLabel value="Workflow Finalizado com Alertas" style="color: #f39c12; font-weight: bold"/>
-                                    <p:outputLabel value="Alerta" style="font-weight: bold"/>
-                                    <p:outputLabel value="Alertas foram lancados durante a execucao deste workflow" />
-
-                                    <p:outputLabel value="Workflow Finalizado com Erros" style="color: #c0392b; font-weight: bold"/>
-                                    <p:outputLabel value="Erro" style="font-weight: bold"/>
-                                    <p:outputLabel value="Erros nao permitiram que este workflow terminasse com sucesso" />
-
-                                    <p:outputLabel value="Workflow Parado com Erros" style="color: #c0392b; font-weight: bold"/>
-                                    <p:outputLabel value="Erro" style="font-weight: bold"/>
-                                    <p:outputLabel value="Estado parcial com erros. Duas acoes podem ser tomadas: finalizar o workflow ou permitir que continue com erros." />
-                                </p:panelGrid>
-                            </center>
-                        </p:panel>
+                        Visualize aqui o status de seus workflows.
                     </p:panel>
                     <br />
-                    <p:panel>
+                    <p:fieldset legend="Workflows">
+                        <p:dataTable value="#{workflowStatusBean.userWorkflows}" var="w" paginator="true" 
+                                     rows="10" emptyMessage="Nenhum workflow">
+                            <f:facet name="header">
+                                Lista de Workflows
+                            </f:facet>
 
+                            <p:column headerText="Id" style="text-align: center">
+                                <p:outputLabel value="#{w.id}" style="font-weight: bold"/>
+                            </p:column>
+
+                            <p:column headerText="Descricao">
+                                <p:outputLabel value="#{w.description}"/>
+                            </p:column>
+
+                            <p:column headerText="Data de criacao" style="text-align: center">
+                                <p:outputLabel value="#{w.creationDatestamp}"/>
+                            </p:column>
+
+                            <p:column headerText="Status">
+                                <p:outputLabel value="#{workflowStatusBean.getStatusText(w.status)}" 
+                                               style="color: #{workflowStatusBean.getStatusColor(w.status)}; font-weight: bold"/>
+                            </p:column>
+
+                            <p:column headerText="Quantidade de Jobs">
+                                <p:outputLabel value="#{w.pipeline.size()}" />
+                            </p:column>
+                        </p:dataTable>
+                    </p:fieldset>
+                    <br />
+                    <p:panel>
+                        <center>
+                            <p:panelGrid columns="3" style="margin-top: 10px">
+                                <f:facet name="header">
+                                    <p:outputLabel value="Legenda de Status" style="color: #2980b9; font-weight: bold; font-size: 14px"/>
+                                </f:facet>
+
+                                <!-- Header -->
+                                <p:outputLabel value="Status" style="font-weight: bold; font-size: 14px"/>
+                                <p:outputLabel value="Nivel" style="font-weight: bold; font-size: 14px"/>
+                                <p:outputLabel value="Legenda" style="font-weight: bold; font-size: 14px"/>
+
+                                <!-- Elements -->
+                                <p:outputLabel value="Workflow Pausado" style="color: #7f8c8d; font-weight: bold"/>
+                                <p:outputLabel value="Informativo" style="font-weight: bold"/>
+                                <p:outputLabel value="Foi requisitada a pausa na execucao do Workflow" />
+
+                                <p:outputLabel value="Workflow Pendente" style="color: #2980b9; font-weight: bold"/>
+                                <p:outputLabel value="Informativo" style="font-weight: bold"/>
+                                <p:outputLabel value="Seu workflow esta agurdando execucao pelo BioNimbuZ" />
+
+                                <p:outputLabel value="Workflow em Execução" style="color: #2980b9; font-weight: bold"/>
+                                <p:outputLabel value="Informativo" style="font-weight: bold"/>
+                                <p:outputLabel value="O workflow esta em plena execucao" />
+
+                                <p:outputLabel value="Workflow Finalizado com Sucesso" style="color: #27ae60; font-weight: bold"/>
+                                <p:outputLabel value="Informativo" style="font-weight: bold"/>
+                                <p:outputLabel value="Seu workflow foi finalizado sem alertas e sem erros" />
+
+                                <p:outputLabel value="Workflow Finalizado com Alertas" style="color: #f39c12; font-weight: bold"/>
+                                <p:outputLabel value="Alerta" style="font-weight: bold"/>
+                                <p:outputLabel value="Alertas foram lancados durante a execucao deste workflow" />
+
+                                <p:outputLabel value="Workflow Finalizado com Erros" style="color: #c0392b; font-weight: bold"/>
+                                <p:outputLabel value="Erro" style="font-weight: bold"/>
+                                <p:outputLabel value="Erros nao permitiram que este workflow terminasse com sucesso" />
+
+                                <p:outputLabel value="Workflow Parado com Erros" style="color: #c0392b; font-weight: bold"/>
+                                <p:outputLabel value="Erro" style="font-weight: bold"/>
+                                <p:outputLabel value="Estado parcial com erros. Duas acoes podem ser tomadas: finalizar o workflow ou permitir que continue com erros." />
+                            </p:panelGrid>
+                        </center>
                     </p:panel>
                 </p:panel>
             </h:form>
