--- a/WebContent/pages/private/files/upload_file.xhtml
+++ b/WebContent/pages/private/files/upload_file.xhtml
@@ -23,7 +23,7 @@
                                       invalidFileMessage="Formato de arquivo inválido"
                                       fileUploadListener="#{fileUploadBean.handleUploadedFile}"
                                       cancelLabel="Cancelar" uploadLabel="Enviar"
-                                      allowTypes="/(\.|\/)(txt|iso|gif|jpe?g|png)$/" label="Escolher Arquivo"
+                                      allowTypes="/(\.|\/)(txt|swt|iso|gif|jpe?g|png)$/" label="Escolher Arquivo"
                                       update="growl,panel" sizeLimit="268435456"/>
                     </p:panel>
                     <br />
