--- a/WebContent/pages/private/workflows/workflow_composer.xhtml
+++ b/WebContent/pages/private/workflows/workflow_composer.xhtml
@@ -105,18 +105,18 @@
                                     <p:outputLabel value="Descrição" style="font-weight: bold"/>
                                     <p:outputLabel value="#{workflowComposerBean.workflow.description} " />
                                     <p:outputLabel value="Tamanho" style="font-weight: bold"/>
-                                    <p:outputLabel value="#{workflowComposerBean.workflow.pipeline.size()} passo(s)" />
+                                    <p:outputLabel value="#{workflowComposerBean.workflow.jobs.size()} passo(s)" />
                                     <p:outputLabel value="Criado em" style="font-weight: bold"/>
                                     <p:outputLabel value="#{workflowComposerBean.workflow.creationDatestamp}" />
                                     <p:outputLabel value="Quantidade de inputs" style="font-weight: bold"/>
-                                    <p:outputLabel value="#{workflowComposerBean.pipeline.size()}" />
+                                    <p:outputLabel value="#{workflowComposerBean.jobs.size()}" />
                                     <p:outputLabel value="Status" style="font-weight: bold"/>
                                     <p:outputLabel value="#{workflowComposerBean.workflowStatus}" 
                                                    style="font-weight: bold; color: #{workflowComposerBean.workflowColor}"/>
                                 </p:panelGrid>
                             </p:panel>
                             <br />
-                            <p:dataTable value="#{workflowComposerBean.pipeline}" var="j" paginator="true" rows="10">
+                            <p:dataTable value="#{workflowComposerBean.jobs}" var="j" paginator="true" rows="10">
                                 <p:column headerText="Id">
                                     <p:outputLabel value="#{j.id}" />
                                 </p:column>
