Some minor changes in workflow handling

--- a/WebContent/pages/private/workflows/start_error.xhtml
+++ b/WebContent/pages/private/workflows/start_error.xhtml
@@ -10,7 +10,11 @@
         <!-- Center Content -->
         <ui:define name="conteudo_centro">
             <h:form>
-
+                <p:panel>
+                    <center>
+                        <p:outputLabel value="Workflow iniciado com erros! Verifique o andamento na aba Status dos Workflows" style="margin: 15px" />
+                    </center>
+                </p:panel>
             </h:form>
         </ui:define>
 
